# msg-store-db-plugin

./: Cargo.toml  README.md
src/: lib.rs
