[package]
name = "msg-store-db-plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1.0"
msg-store = { git = "https://github.com/msg-store/msg-store", rev = "55e4a422aca650b172a45aa961ef901576bb8e84" }