[package]
name = "msg-store-db-plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1.0"
msg-store = { git = "https://github.com/msg-store/msg-store", rev = "8b99422811caa553f5ebc70fd1c645dac79aff4a" }